--- a/projects/2ptstat-analysis/assignments/assignment3_DarshakPatel.ipynb
+++ b/projects/2ptstat-analysis/assignments/assignment3_DarshakPatel.ipynb
@@ -691,7 +691,7 @@
    "source": [
     "##### Comments on Results:\n",
     "\n",
-    "From the corner plot, we notice that when the Hartlap factor is applied to the results when running the MCMC using the 1.5k data vector numerical covariance matrix that the constraints obtained by the MCMC are not as tight/constrained as when we do not apply the Hartlap factor. At face value, one might then (incorrectly) interpret that not applying the Hartlap factor is better, this is not true. The proof is shown when plotting the chi-squared distributon. We expect the chi2 distribution to peak ~900 but as we see, when we do not apply the Hartlap factor the chi2 distribution is shifted significantly to the right. This tell us that the MCMC run when not applying the Hartlap factor is not converging to the correct parameter constraints. Essentially, when we apply the Hartlap factor, it is correcting the posterioro distributions to be better centred on the correct parameter constraint value (proof of this is shown later in task 3). In doing so, the posterior distribution itself does get large."
+    "From the corner plot, we notice that when the Hartlap factor is applied to the results when running the MCMC using the 1.5k data vector numerical covariance matrix that the constraints obtained by the MCMC are not as tight/constrained as when we do not apply the Hartlap factor. In other words, using the Hartlap factor broaden the posterior distributions. At face value, one might then (incorrectly) interpret that not applying the Hartlap factor is better, this is not true. The proof is shown when plotting the chi-squared distributon. We expect the chi2 distribution to peak ~900 but as we see, when we do not apply the Hartlap factor the chi2 distribution is shifted significantly to the right. This tell us that the MCMC run when not applying the Hartlap factor is not converging to the correct parameter constraints. Essentially, when we apply the Hartlap factor, it is correcting the posterior distributions to be better centred on the correct parameter constraint value (proof of this is shown later in task 3). In doing so, the posterior distribution itself does get large."
    ]
   },
   {
@@ -1275,7 +1275,7 @@
    "source": [
     "##### Comments on Results:\n",
     "\n",
-    "In Assignment 2, specifically in the last task, we determined how many PCA elements it took to reach 10% and 1% constrianing power as compared to the max constraint on the parameters of interest. We found that it took signifincatly less PCA elements than total degrees of freedom to reach 10% and 1% constraining power. We see proof of that once more looking at the corner plot of the posterior distributions. We see that at just 600 PCA elements we almost acivhede exactly the same constraining power for the 4 varying paramters in the case of using all the elements (i.e., 900 PCA). The distribution of PCA 300 is not entirely off from PCA 600 and PCA 900, and so, around 400-600 PCA elements would be sufficient to get the same constraining power. Ultimately, this shows that using PCA, we can speed up our analysis while obtaining very good parameter constraints.\n",
+    "In Assignment 2, specifically in the last task, we determined how many PCA elements it took to reach 10% and 1% constrianing power as compared to the max constraint on the parameters of interest. We found that it took signifincatly less PCA elements than total degrees of freedom to reach 10% and 1% constraining power. We see proof of that once more looking at the corner plot of the posterior distributions. We see that at just 600 PCA elements we almost achieve exactly the same constraining power for the 4 varying paramters in the case of using all the elements (i.e., 900 PCA). The distribution of PCA 300 is not entirely off from PCA 600 and PCA 900, and so, around 400-600 PCA elements would be sufficient to get the same constraining power. Ultimately, this shows that using PCA, we can speed up our analysis while obtaining very good parameter constraints.\n",
     "\n",
     "The chi2 distributions shows that the mean of the distribution is very close to being centred at the number of degrees of freedom. In other words, if we take 300 PCA elements, we expect the chi2 ditribution to peak at 300, and PCA 600 to peak at 600 etc."
    ]
@@ -1438,7 +1438,9 @@
    "source": [
     "##### Comments on Results:\n",
     "\n",
-    "To better understand the results, it made sense to create another corner plot comparing my result from task 2 with what was done here with task 3b. The key takeaway here is that, if we have a very noisy covaraince matrix, for example the 1.5k numerical covariance matrix, then PCA analysis is not effective. We saw previously in task 3, that when we use the analytical covariance matrix PCA analysis was able to obtain the same max constraining power quite fast with fewer degrees of freedom. What we find in this part of the task is that, we need more and more PCA elements, pretty much al 900, to obtain the same max parameter constraints. "
+    "To better understand the results, it made sense to create another corner plot comparing my result from task 2 with what was done here with task 3b. The key takeaway here is that, if we have a very noisy covaraince matrix, for example the 1.5k numerical covariance matrix, then PCA analysis is not as effective. We saw previously in task 3, that when we use the analytical covariance matrix PCA analysis was able to obtain the same max constraining power quite fast with fewer degrees of freedom. What we find in this part of the task is that, we need more and more PCA elements, pretty much all 900, to obtain the same max parameter constraints. \n",
+    "\n",
+    "Another noteworthy point is that as we used fewer PCA elements the number of dimensions taken into calculating the Hartlap factor decreases. As n_dim goes to 0, the Hartlap factor goes to 1. In other words, the fewer PCA elements we take, the less correction the Hartlap factor is making. With that in mind, we saw in task 2 that applying the Hartlap factor broadened our posterior distributions and not applying it shrunk our distributions. We see that isn't quite the case now when we've added in PCA data compressions. In this task we've seen that using fewer PCA elements broadens the distribution and using more tightens them. This is opposing the trend we saw with the Hartlap factor. Essential, this idicates that when we use PCA and Hartlap factor corrections together, there is a \"sweet spot\" in which we expect both opposing affects to balance out."
    ]
   },
   {
@@ -1882,13 +1884,11 @@
    "source": [
     "#### Comments on Noise-Free Model:\n",
     "\n",
-    "<b style='color:red'> comments on the shift being due to the noise free and noisy model</b>\n",
+    "Once again, we see the same trends and conclusions as determined with task 3. We repeated task 3 using now the noise-free model+analytical covariance and then the noise-free model+1.5k num covariance. We see that when using a noise-free model, regarldess of whether we also use an analytical covaraince or numerical covvariance PCA seems to be effective in both scenarios. This is in constrast to task 3, where we saw, when using the noisy-model, that PCA was not as effective using the num cov as the analytical. In both corner plots, we see that PCA 300 was enough to already obtain a posterior distribution very similar (if not nearly identical) to if we had used all the elemtns (PCA 900).\n",
     "\n",
-    "Once again, we see the same trends and conclusions as determined with task 3. We repeated task 3 using now the noise-free model+analytical covariance and then the noise-free model+1.5k num covariance. We see that when using a noise-free model in tandem with the analytical covaraince the PCA analysis is even more effective. Previously it took about 600 PCA elements to match the cmax onstraining power, but now, at only 300 PCA elemetns we already obtain the same constraining power. This is also shown in the chi2-distribtuon as the distribution for PCA 300 closely matches PCA 900 (all elements used).\n",
+    "Comparing results from the noise-free model and the noisy-model we notice that all the posterior distributions when using the noise-free model are all centered at roughly that same point. There is not shifting of the distributions liek what we saw when we used the noisy-model. This ultimately shows the impact noise can have in a model and its impact on MCMC. The noise in the model causes the estiamtion of the parameters to shift and vary which leads to the variations in the posterior distributions. When we remove the noise from the model we are essentially removing a large source of variability from our MCMC. This allows the MCMC to more accuratley estimate the parameters, regardless of the number of PCA elements used, leading to more stable posterior distributions.\n",
     "\n",
-    "\n",
-    "<b style='color:red'> comments below are wrong now</b>\n",
-    "In the second part, we reintroduce the very noisy 1.5k numerical covariance matrix. Based on the corner plot and chi2-distribution plots we make the same conclusion as before. Due to the noisiness of the num cov matrix, PCA analysis becomes ineffective. We see that even at PCA 600, the max constraining power is now reached. This is also shown in the chi2 distribution as the peak of PCA600 is still non-ngeligibly below PCA900."
+    "Finally, we comment on the chi2 distributions plotted. We see that in both cases (analytical and 1.5k num cov), the peaks of the distributions are all close to 0. This indicates that the MCMC predicated model is nearly identical to the expected model. This makes sense as when using the noise-free model, the posterior distributions of the MCMC are more stable due to the abscence of a significant cause of variability. Without noise, the MCMC, for the majority of the time, will obtain models very close to the expected. We stil do see a tail to the right which does show that it's not perfect."
    ]
   },
   {
@@ -2576,7 +2576,245 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "  9%|▉         | 93/1000 [00:34<05:36,  2.70it/s]"
+      "100%|██████████| 1000/1000 [06:06<00:00,  2.73it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Removed no burn in\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 1000/1000 [05:53<00:00,  2.83it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Removed no burn in\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 1000/1000 [05:59<00:00,  2.78it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Removed no burn in\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 1000/1000 [05:51<00:00,  2.84it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Removed no burn in\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 1000/1000 [06:00<00:00,  2.78it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Removed no burn in\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 1000/1000 [05:59<00:00,  2.78it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Removed no burn in\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 1000/1000 [05:51<00:00,  2.84it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Removed no burn in\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 1000/1000 [05:59<00:00,  2.78it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Removed no burn in\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 1000/1000 [07:08<00:00,  2.33it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Removed no burn in\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 1000/1000 [07:30<00:00,  2.22it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Removed no burn in\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 1000/1000 [06:06<00:00,  2.73it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Removed no burn in\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 1000/1000 [06:10<00:00,  2.70it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Removed no burn in\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 1000/1000 [06:19<00:00,  2.63it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Removed no burn in\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 1000/1000 [06:17<00:00,  2.65it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Removed no burn in\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 1000/1000 [06:34<00:00,  2.54it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Removed no burn in\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 1000/1000 [05:52<00:00,  2.84it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Removed no burn in\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 1000/1000 [06:00<00:00,  2.77it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Removed no burn in\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 16%|█▋        | 163/1000 [01:08<06:03,  2.30it/s]"
      ]
     }
    ],
